# fast-ta

./: .auto-claude-status  .claude_settings.json  .gitignore  Cargo.toml  LICENSE  README.md
.auto-claude/specs/001-implement-features-from-development-plan-document/: build-progress.txt  complexity_assessment.json  context.json  critique_report.json  implementation_plan.json  init.sh  project_index.json  qa_report.md  requirements.json  research.json  review_state.json  spec.md  task_logs.json  task_metadata.json
.auto-claude/specs/002-update-product-requirements-with-benchmark-results/: build-progress.txt  complexity_assessment.json  context.json  implementation_plan.json  init.sh  project_index.json  qa_report.md  requirements.json  review_state.json  spec.md  task_logs.json  task_metadata.json
.github/workflows/: ci.yml  python.yml
benches/experiments/E01_baseline/: REPORT.md
benches/experiments/E02_running_stat/: REPORT.md
benches/experiments/E03_ema_fusion/: REPORT.md
benches/golden/: README.md
crates/fast-ta/: Cargo.toml
crates/fast-ta-cli/: Cargo.toml  README.md
crates/fast-ta-cli/src/: args.rs  csv_parser.rs  csv_writer.rs  error.rs  lib.rs  main.rs
crates/fast-ta-cli/tests/: cli_integration.rs
crates/fast-ta-cli/tests/fixtures/: malformed.csv  missing_values.csv  no_header.csv  ohlc.csv  ohlcv.csv  simple_close.csv
crates/fast-ta-core/: Cargo.toml
crates/fast-ta-core/src/: error.rs  lib.rs  traits.rs
crates/fast-ta-core/src/indicators/: atr.rs  bollinger.rs  ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs  stochastic.rs
crates/fast-ta-core/src/kernels/: ema_fusion.rs  mod.rs  rolling_extrema.rs  running_stat.rs
crates/fast-ta-core/src/plan/: dag.rs  direct_mode.rs  mod.rs  plan_mode.rs  registry.rs  spec.rs
crates/fast-ta-experiments/: Cargo.toml
crates/fast-ta-experiments/benches/: e01_baseline.rs  e02_running_stat.rs  e03_ema_fusion.rs  e04_rolling_extrema.rs  e05_plan_overhead.rs  e06_memory_writes.rs  e07_end_to_end.rs
crates/fast-ta-experiments/benches/common/: mod.rs
crates/fast-ta-experiments/src/: data.rs  lib.rs  talib_baseline.rs
crates/fast-ta-python/: CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
crates/fast-ta-python/python/fast_ta/: __init__.py  _fast_ta.pyi  validate.py
crates/fast-ta-python/src/: lib.rs
crates/fast-ta-python/tests/: test_indicators.py
crates/fast-ta/benches/: indicators.rs  talib_comparison.rs  workload.rs
crates/fast-ta/examples/: basic_moving_averages.rs  error_handling.rs  momentum_indicators.rs  volatility_indicators.rs  zero_allocation.rs
crates/fast-ta/src/: batch.rs  error.rs  lib.rs  prelude.rs  traits.rs  utils.rs
crates/fast-ta/src/indicators/: ad.rs  adosc.rs  adx.rs  apo.rs  aroon.rs  atr.rs  bollinger.rs  bop.rs  cci.rs  cmo.rs  dema.rs  donchian.rs  dx.rs  ema.rs  ht_core.rs  ht_dcperiod.rs  ht_dcphase.rs  ht_phasor.rs  ht_sine.rs  ht_trendline.rs  ht_trendmode.rs  kama.rs  macd.rs  mama.rs  mavp.rs  mfi.rs  midpoint.rs  midprice.rs  mod.rs  mom.rs  obv.rs  price_transform.rs  roc.rs  rsi.rs  sar.rs  sarext.rs  sma.rs  statistics.rs  stochastic.rs  stochrsi.rs  (+8 more)
crates/fast-ta/src/indicators/candlestick/: core.rs  mod.rs  single.rs  three_candle.rs  two_candle.rs
crates/fast-ta/src/kernels/: mod.rs  rolling_extrema.rs
crates/fast-ta/tests/: allocation_tests.rs  golden_comparison_tests.rs  input_validation_tests.rs  integration.rs  json_fixture_tests.rs  mathematical_conventions_tests.rs  numeric_policy_tests.rs  property_tests.rs  real_world_regression_tests.rs  reference_tests.rs  spec_fixture_tests.rs
crates/fast-ta/tests/common/: mod.rs
crates/fast-ta/tests/fixtures/: spec_adx_directional_movement.json  spec_atr_gap.json  spec_atr_gap_gap_down_included.json  spec_atr_gap_gap_up_included.json  spec_atr_gap_no_gap_standard_range.json  spec_atr_initialization.json  spec_atr_initialization_sma_seed_period_3.json  spec_atr_initialization_sma_seed_period_5.json  spec_bollinger_collapse.json  spec_bollinger_collapse_constant_decimal.json  spec_bollinger_collapse_constant_integer.json  spec_bollinger_collapse_zero_stddev_no_nan.json  spec_bollinger_width.json  spec_bollinger_width_constant_price_zero_width.json  spec_bollinger_width_symmetric_bands.json  spec_donchian_bands.json  spec_ema_sma_seed.json  spec_ema_sma_seed_period_3_basic.json  spec_ema_sma_seed_period_5_constant.json  spec_lookback.json  spec_lookback_atr.json  spec_lookback_atr_lookback.json  spec_lookback_atr_period_14.json  spec_lookback_atr_period_5.json  spec_lookback_bollinger.json  spec_lookback_bollinger_lookback.json  spec_lookback_bollinger_period_20.json  spec_lookback_bollinger_period_5.json  spec_lookback_ema.json  spec_lookback_ema_lookback.json  spec_lookback_ema_period_14.json  spec_lookback_ema_period_5.json  spec_lookback_macd.json  spec_lookback_macd_custom_5_13_4.json  spec_lookback_macd_lookback.json  spec_lookback_macd_standard_12_26_9.json  spec_lookback_rsi.json  spec_lookback_rsi_lookback.json  spec_lookback_rsi_period_14.json  spec_lookback_rsi_period_5.json  (+32 more)
crates/fast-ta/tests/golden/: atr.json  atr_constant_range.json  bollinger.json  bollinger_constant_price.json  ema.json  ema_ascending_period_3.json  ema_constant_values.json  ema_period_5_constant.json  ema_reference.json  macd.json  macd_constant_price.json  metadata.json  rsi.json  rsi_all_gains.json  rsi_all_losses.json  rsi_no_movement.json  rsi_reference.json  sma.json  sma_constant_values.json  sma_period_5.json  sma_reference.json  sma_simple_ascending.json  stochastic.json  stochastic_close_at_high.json  stochastic_close_at_low.json
docs/: AUDIT_REPORT.md  advanced-api-zero-copy-proposal.md  benchmark-baseline.md  beta-testing-guide.md  hosf-indicator-api.md  indicator-standards.md  product-requirements.md  rust-code-standards.md
docs/decisions/: 001-talib-comparison.md
docs/experiments/: SUMMARY.md
logs/: .3da6050699eb17bb3d5d21ea209a4b95b1f908dc-audit.json  .614f31a2105283b381f364c06cd2921a843ed94e-audit.json  .a02b579fbdbd063f3ba075061c2f76846fe3f828-audit.json
tools/golden/: generate.py
(+58 files in other folders)
