[workspace]
resolver = "2"
members = ["crates/fast-ta-core", "crates/fast-ta-experiments"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/latenty-infinity/fast-ta"
authors = ["Latenty Infinity"]

[workspace.dependencies]
# Core dependencies
num-traits = "0.2"
petgraph = "0.6"

# Test data generation
rand = "0.8"
rand_chacha = "0.3"

# Benchmarking
criterion = "0.5.1"

# Serialization (for benchmark output)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
