[workspace]
resolver = "2"
members = ["crates/fast-ta", "crates/fast-ta-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/latenty-infinity/fast-ta"
authors = ["Latenty Infinity"]

[workspace.dependencies]
# Core dependencies
num-traits = "0.2"
thiserror = "1.0"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"

# Test data generation
rand = "0.8"
rand_chacha = "0.3"
proptest = "1.4"

# Benchmarking
criterion = "0.5.1"

# Serialization (for benchmark output)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3              # Maximum optimizations
lto = "fat"                # Full cross-crate LTO
codegen-units = 1          # Single codegen unit for maximum optimization
panic = "abort"            # Abort on panic (no unwinding overhead)
strip = true               # Strip symbols from binary
