[package]
name = "fast-ta-cli"
description = "Command-line interface for fast-ta technical analysis library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "fast_ta_cli"
path = "src/lib.rs"

[[bin]]
name = "fast-ta"
path = "src/main.rs"

[dependencies]
fast-ta = { path = "../fast-ta", version = "0.1.0" }
clap = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
