[package]
name = "fast-ta-core"
description = "High-performance technical analysis library core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
num-traits = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
