[package]
name = "fast-ta-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Python bindings for fast-ta technical analysis library"

[lib]
name = "fast_ta"
crate-type = ["cdylib"]

[dependencies]
fast-ta = { path = "../fast-ta" }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"

[dev-dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
