[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast-ta"
version = "0.1.0"
description = "High-performance technical analysis library"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Latenty Infinity" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
keywords = ["technical-analysis", "trading", "finance", "indicators", "stocks", "numpy"]
dependencies = ["numpy>=1.20"]

[project.scripts]
fast-ta-validate = "fast_ta.validate:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "maturin>=1.0"]

[project.urls]
Homepage = "https://github.com/latenty-infinity/fast-ta"
Documentation = "https://docs.rs/fast-ta"
Repository = "https://github.com/latenty-infinity/fast-ta"
Issues = "https://github.com/latenty-infinity/fast-ta/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fast_ta._fast_ta"
strip = true
