[package]
name = "fast-ta"
description = "High-performance technical analysis library for financial time series"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["technical-analysis", "trading", "finance", "indicators", "stocks"]
categories = ["science", "algorithms", "mathematics"]
readme = "../../README.md"

# Include only essential files in published crate (excludes tests and fixtures)
include = [
    "src/**/*",
    "examples/**/*",
    "benches/**/*",
    "Cargo.toml",
    "../../LICENSE",
    "../../README.md",
]

[features]
default = []
serde = ["dep:serde"]
# Parallel batch processing using Rayon
parallel = ["dep:rayon"]
# Debug feature: treat TA-Lib reference divergences as test failures instead of warnings
reference-checks-strict = []
# Enable dhat allocation profiling tests (run separately: cargo test --features dhat-heap)
dhat-heap = ["dep:dhat"]

[dependencies]
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
dhat = { version = "0.3", optional = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }
ta-lib-sys = "0.1"

[[bench]]
name = "indicators"
harness = false

[[bench]]
name = "talib_comparison"
harness = false

[[bench]]
name = "workload"
harness = false
